--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
     /* ------ SHORT HAND (ATALHO) ------ */
     /* background-color: color image repeat position/size; */
     background: var(--bg-url) no-repeat top center/cover;
-
+    height: 100vh;
 }
 
 body * {
@@ -177,3 +177,14 @@ footer {
     font-size: 14px;
 }
 
+/* -----  MEDIA QUERIES ----- */
+
+@media (min-width: 700px) {
+    :root {
+        --bg-url: url(./assets/bg-desktop.jpg)
+    }
+
+    .light {
+        --bg-url: url(./assets/bg-desktop-light.jpg)
+    }
+}
