adjust margin and padding contain

--- a/style.css
+++ b/style.css
@@ -50,8 +50,8 @@ body * {
     width: 100%;
     max-width: 58rem;
     /* border: 1px solid; */
-    margin: 5.6rem auto 0px;
-    padding: 2.4rem;
+    margin: 1.6rem auto .6rem;
+    padding: 1.4rem;
 }
 
 /* ---------  PROFILE  ---------  */
